# flowsheet-sim

./: .gitignore  Makefile
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/components/: registry.py
backend/app/models/: common.py  distillation.py  flash.py  reactor.py
backend/app/routers/: components.py  distillation.py  flash.py  reactor.py
backend/app/solvers/: adapter_chemeng.py  adapter_sepflows.py  figure_export.py  rate_law_parser.py
backend/tests/: conftest.py  test_components.py  test_distillation.py  test_flash.py  test_rate_law_parser.py  test_reactor.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/forms/: FlashDrumForm.tsx  McCabeThieleForm.tsx  ReactorForm.tsx
frontend/src/components/results/: PlotViewer.tsx  ReactorPlot.tsx  ResultsSummary.tsx  StreamTable.tsx
frontend/src/components/sidebar/: UnitOpPalette.tsx
frontend/src/lib/: api.ts  types.ts
frontend/src/stores/: useSimStore.ts
