[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flowsheet-sim-backend"
version = "0.1.0"
description = "FastAPI backend for the chemical process flowsheet simulator"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "mypy>=1.5",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -ra"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 99
